# ChurchPresenter

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
metadata/: bundle_linux.sh  bundle_macos.sh  bundle_windows.sh  church-presenter.spec  installer.iss  installer.nsi
src/: db.rs  main.rs  models.rs  ndi_out.rs  style.css  test_build2.rs  ui.rs
